// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"edit artworks" button does not render an edit button if there are no artworks 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c1 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c1 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;

exports[`"edit artworks" button renders a disabled edit button if there are artworks, but none selected 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c5 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding-top: 1px;
}

.c4 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #000;
  border-color: #000;
  color: #FFF;
}

.c4.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c4.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c4:hover {
    background-color: #6E1EFF;
    border-color: #6E1EFF;
    color: #FFF;
  }
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c1 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c1 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
  <button
    className="c4  disabled"
    disabled={true}
    height="41px"
    onClick={[Function]}
    width={1}
  >
    <div
      className="c5 "
      fontFamily={
        Object {
          "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "fontWeight": 500,
        }
      }
      fontSize="14px"
    >
      Edit Artworks
    </div>
  </button>
</div>
`;

exports[`"edit artworks" button renders an enabled edit button if there are selected artworks 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c5 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding-top: 1px;
}

.c4 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #000;
  border-color: #000;
  color: #FFF;
}

.c4.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c4.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c7 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  margin-top: 10px;
  padding-left: 20px;
  padding-right: 20px;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #000;
}

.c7.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c7.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c6 {
  color: #666666;
  display: block;
  margin-top: 1em;
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c4:hover {
    background-color: #6E1EFF;
    border-color: #6E1EFF;
    color: #FFF;
  }
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c7:hover {
    background-color: #C2C2C2;
    border-color: #C2C2C2;
    color: #000;
  }
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c1 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c1 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
  <button
    className="c4  "
    height="41px"
    onClick={[Function]}
    width={1}
  >
    <div
      className="c5 "
      fontFamily={
        Object {
          "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "fontWeight": 500,
        }
      }
      fontSize="14px"
    >
      Edit Artworks
    </div>
  </button>
  <a
    className="c6"
    href="http://helix/genome/artworks?artwork_ids="
    rel="noopener noreferrer"
    target="_blank"
  >
    Open selected works in Helix
  </a>
  <button
    className="c7  "
    height="41px"
    onClick={[Function]}
  >
    <div
      className="c5 "
      fontFamily={
        Object {
          "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "fontWeight": 500,
        }
      }
      fontSize="14px"
    >
      Copy selected works to clipboard
    </div>
  </button>
</div>
`;

exports[`does not render attribution class autosuggest if it is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c3 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c3 input:focus {
  outline: none;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c4 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c4:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c4 .filter {
  margin-top: 1em;
}

.c4 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c4 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Attribution Class
      </h2>
      <div
        className="c1"
      >
        Ephemera
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c2 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c2 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;

exports[`does not render fair autosuggest if fair is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c3 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c3 input:focus {
  outline: none;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c4 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c4:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c4 .filter {
  margin-top: 1em;
}

.c4 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c4 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Fair
      </h2>
      <div
        className="c1"
      >
        Nice Fair
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c2 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c2 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;

exports[`does not render partner autosuggest if partner is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c3 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c3 input:focus {
  outline: none;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c4 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c4:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c4 .filter {
  margin-top: 1em;
}

.c4 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c4 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Partner
      </h2>
      <div
        className="c1"
      >
        Nice Gallery
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c2 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c2 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #333;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.5;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #999;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <input
      onKeyUp={[Function]}
      placeholder="Add a keyword"
      type="text"
    />
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-gene-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-tag-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-artist-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-artist-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add an artist"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-artist-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-partner-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-fair-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-attribution-class-autosuggest"
      className="react-autosuggest__container"
      role="combobox"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-attribution-class-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an attribution class"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-attribution-class-autosuggest"
        role="listbox"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div>
    <div
      className="c1 minPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Minimum Price"
        type="text"
      />
    </div>
    <div
      className="c1 maxPriceInput"
    >
      <input
        onKeyUp={[Function]}
        placeholder="Maximum Price"
        type="text"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Acquireable Or Offerable?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        True
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        False
      </a>
    </div>
  </div>
</div>
`;
